<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">domob</string>
    <string name="prefs_name">domob Preferences</string>
    <string name="play_name">Now Playing</string>
    <string name="server_preferences">Ampache Server</string>
    <string name="title_server_preference">Ampache Url</string>
    <string name="summary_server_preference">Enter the full URL for your ampache server (ie: http://example.com/ampache )</string>
    <string name="dialog_server_preference">URL</string>
    <string name="title_username_preference">Ampache Username</string>
    <string name="summary_username_preference"></string>
    <string name="dialog_username_preference">username</string>
    <string name="title_password_preference">Ampache Password</string>
    <string name="summary_password_preference"></string>
    <string name="dialog_password_preference">password</string>
    <string name="search_label">Songs</string>
    <string name="shuffle">Shuffle</string>
    <string name="shuffle2">|Shuffle|</string>
    <string name="repeat">Repeat</string>
    <string name="repeat2">|Repeat|</string>
    <string-array name="protocols_entries_values_preference">
        <item >http</item>
    </string-array>
    <string-array name="protocols_entries_preference">
        <item >HTTP</item>
    </string-array>
    <string name="protocols_default_value_preference">http</string>
    <string name="title_protocols_preference">Protocol</string>
    <string name="dialog_title_protocols_preference">Protocol</string>
</resources>
