<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/server_preferences">
    
        <EditTextPreference
                android:key="server_url_preference"
                android:title="@string/title_server_preference"
                android:summary="@string/summary_server_preference"
                android:dialogTitle="@string/dialog_server_preference" />
        <EditTextPreference
                android:key="server_username_preference"
                android:title="@string/title_username_preference"
                android:summary="@string/summary_username_preference"
                android:dialogTitle="@string/dialog_username_preference" />
        <EditTextPreference
                android:key="server_password_preference"
                android:title="@string/title_password_preference"
                android:summary="@string/summary_password_preference"
                android:dialogTitle="@string/dialog_password_preference"
                android:password="true" />
        <ListPreference
                android:key="server_protocol_preference"
                android:title="@string/title_protocols_preference"
                android:entryValues="@array/protocols_entries_values_preference"
                android:entries="@array/protocols_entries_preference"
                android:dialogTitle="@string/dialog_title_protocols_preference"
                android:defaultValue="@string/protocols_default_value_preference" />
    </PreferenceCategory>
</PreferenceScreen>
        